# information_theory

./: README.md  index.css  index.html  information.py  pyproject.toml  requirements.txt  texput.tex
docs/: index.html
graphics/: slope_computation.fig
src/information_theory/: README  __init__.py  distortion.py  information.py
